<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="landing">landing</string>
    <string name="landing_title">Учебный проект студента факультета Веб-разработки.</string>
    <string name="landing_description">Листайте ниже, чтобы узнать больше про этот проект и его создателя.</string>
    <string name="landing_learn_more">Узнать больше</string>
    <string name="landing_about_project_title">О проекте</string>
    <string name="landing_about_project_subtitle">Дипломный проект включал 5 этапов</string>
    <string name="landing_about_project_description">Составление плана, работу над бэкендом, вёрстку, добавление функциональности и финальные доработки.</string>
    <string name="landing_about_project_time_to_create">На выполнение диплома ушло 5 недель</string>
    <string name="landing_about_project_stages">У каждого этапа был мягкий и жёсткий дедлайн, которые нужно было соблюдать, чтобы успешно защититься.</string>
    <string name="landing_one_week">1 неделя</string>
    <string name="landing_four_week">4 недели</string>
    <string name="github">GitHub</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="glad_to_see">Рады видеть!</string>
    <string name="login_hint">Введите имя</string>
    <string name="email_hint">Введите почту</string>
    <string name="password_hint">Введите пароль</string>
    <string name="already_sign_in">Уже зарегестрированы?</string>
    <string name="not_sign_in">Ещё не зарегистрированы?</string>
    <string name="general">Главная</string>
    <string name="movies">Фильмв</string>
    <string name="saved_movies">Сохранённые фильмы</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
</resources>