<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_landing"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/very_dark_blue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_landing"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/circle_aqua_green"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="14dp"
                android:background="@android:color/transparent"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="12sp"
                app:layout_constraintEnd_toStartOf="@+id/button_sign_in"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="26dp"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="14dp"
                android:background="@drawable/corner_radius_3"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/landing_image"
                android:layout_width="210dp"
                android:layout_height="206dp"
                android:layout_marginTop="70dp"
                android:contentDescription="@string/landing"
                android:src="@drawable/landing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

            <TextView
                android:id="@+id/landing_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="10dp"
                android:text="@string/landing_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/landing_image" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="30dp"
                android:text="@string/landing_description"
                android:textColor="@color/white"
                android:textSize="13sp"
                android:textAlignment="center"
                android:alpha="0.5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/landing_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>